# FastAPI_BookingHotels

./: .dockerignore  .env-example  .env-non-dev.example  .gitignore  Dockerfile  README.md  docker-compose.yml  exceptions.py  grafana-dashboard.json  main.py  pyproject.toml  pytest.ini  requirements.txt  test_data.sql
app/: config.py  create_jwt_token.py  database.py  exceptions.py  gunicorn.conf.py  logger.py  main.py
app/admin/: auth.py  views.py
app/bookings/: cache.py  dao.py  dependecies.py  models.py  router.py  service.py  shemas.py
app/csv/: hotels.csv
app/dao/: base.py
app/hotels/: dao.py  models.py  router.py  shemas.py
app/hotels/rooms/: dao.py  models.py  router.py  shemas.py
app/images/: router.py
app/importer/: init_model.py  router.py
app/infrastructure/: cache.py  database.py
app/migrations/: env.py
app/migrations/versions/: 3dd12a3075c1_create_db.py  917495b46282_create_db.py
app/pages/: router.py
app/prometheus/: router.py
app/routers/v1/: __init__.py  endpoints.py
app/tasks/: celery.py  tasks.py
app/templates/: hotels.html
app/tests/: conftest.py  mock_users.json
app/tests/integration_tests/test_bookings/: test_api.py  test_dao.py
app/tests/integration_tests/test_hotels/: test_api.py  test_dao.py
app/tests/integration_tests/test_users/: test_api.py
app/tests/unit_tests/test_users/: test_dao.py
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  shemas.py
app/utils/: converter.py
csv_data/: data_bookings.csv  data_hotels.csv  data_rooms.csv
docker/: app.sh
(+8 files in other folders)
