[tool.pyright]
include = ["app"]
[tool.poetry]
name = "fastapi-bookinghotels"
version = "0.1.0"
description = "Web application on FastAPI"
authors = ["Yurii <yurchik1997yurchik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.105.0"}
sqlalchemy = {extras = ["async"], version = "^2.0.23"}
alembic = "^1.13.0"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
gunicorn = "^21.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
celery = "^5.3.6"
httpx = "^0.25.2"
jinja2 = "^3.1.2"
redis = "^5.0.1"
fastapi-cache2 = "^0.2.1"
sqladmin = "^0.16.0"
asyncpg = "^0.29.0"
python-json-logger = "^2.0.7"
pillow = "^10.1.0"
pandas = "^2.1.4"
prometheus-fastapi-instrumentator = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.2"
pytest = "^7.4.3"
isort = "^5.13.2"
flake8 = "^6.1.0"
autoflake = "^2.2.1"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.autoflake]
check_diff = true
imports = ["sqlalchemy", "app"]
